# nhl_api

./: .gitignore  README.md  __init__.py  config.py  example.py  exceptions.py  http_client.py  nhl_api.md  pyproject.toml  requirements-dev.txt  stats_client.py  utils.py  web_client.py
stats/: game.py  players.py
tests/: conftest.py  test_all_stats_routes.py  test_all_web_routes.py
tests/web/: test_players.py
web/: misc.py  teams.py  web_client.py
